# ParXive

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  NOTICE  README.md  SECURITY.md  clippy.toml  config.toml  demo.sh  demo_v2.sh  deny.toml  report.html  rustfmt.toml
.cargo/: config.toml
.claude/: settings.local.json
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: branch-protection-guard.yml  ci.yml  codeql.yml  release.yml
_artifacts/: parx-linux-x86_64
_tgt/: .rustc_info.json
_tgt/debug/.fingerprint/ahash-76d43b5cdac221d8/: run-build-script-build-script-build  run-build-script-build-script-build.json
_tgt/debug/.fingerprint/ahash-9dd8da1a732a7e3e/: lib-ahash  lib-ahash.json
_tgt/debug/.fingerprint/ahash-bbe92eac37dcf19f/: build-script-build-script-build  build-script-build-script-build.json
_tgt/debug/.fingerprint/aho-corasick-329d8e40f7e8c17a/: lib-aho_corasick  lib-aho_corasick.json
_tgt/debug/.fingerprint/anstream-f29a2ab3dcb794d4/: lib-anstream  lib-anstream.json
_tgt/debug/.fingerprint/anstyle-d5e680706194cb8c/: lib-anstyle  lib-anstyle.json
_tgt/debug/.fingerprint/anstyle-parse-97ee5d31e9f91152/: lib-anstyle_parse  lib-anstyle_parse.json
_tgt/debug/.fingerprint/anstyle-query-9cec794464adbf56/: lib-anstyle_query  lib-anstyle_query.json
_tgt/debug/.fingerprint/anyhow-139b9156b2dc4a22/: lib-anyhow  lib-anyhow.json
_tgt/debug/.fingerprint/anyhow-3fdc7650d9caffa7/: run-build-script-build-script-build  run-build-script-build-script-build.json
_tgt/debug/.fingerprint/anyhow-b92bc91ca51a9075/: build-script-build-script-build  build-script-build-script-build.json
_tgt/debug/.fingerprint/arrayref-4c03131a39eadf88/: lib-arrayref  lib-arrayref.json
_tgt/debug/.fingerprint/arrayvec-49adc1017f8858b9/: lib-arrayvec  lib-arrayvec.json
_tgt/debug/.fingerprint/autocfg-8d1f3b4b167b68d2/: lib-autocfg  lib-autocfg.json
_tgt/debug/.fingerprint/bincode-652b35a92566a192/: lib-bincode  lib-bincode.json
_tgt/debug/.fingerprint/blake3-4f77bb8476243be6/: run-build-script-build-script-build  (+1 more)
docs/: benchmarks.md  dev-guide.md  exit-codes.md  testing.md
parx-cli/: Cargo.toml
parx-cli/src/: main.rs
parx-cli/tests/: outer_decode_cli.rs  parity_index_resilience.rs  smoke.rs
parx-core/: Cargo.toml
parx-core/i18n/: en-GB.ftl
parx-core/src/: compute.rs  cuda_backend.rs  encode.rs  index.rs  lib.rs  localize.rs  manifest.rs  merkle.rs  parity_audit.rs  path_safety.rs  progress.rs  repair.rs  rs_codec.rs  verify.rs  volume.rs
parx-core/tests/: codec_roundtrip.rs  encode_smoke.rs  index_roundtrip.rs  invariants.rs  merkle.rs  path_safety.rs  path_safety_windows.rs  path_safety_windows_symlink.rs  verify_repair.rs
patches/: 0001-outer-rs-decode.patch
reports/: code-review-1.html  code-review-3.html
root_par2/: bench.par2  bench.vol000+001.par2  bench.vol001+002.par2  bench.vol003+004.par2  bench.vol007+008.par2  bench.vol015+016.par2  bench.vol031+032.par2  bench.vol063+064.par2  bench.vol127+128.par2  bench.vol511+189.par2
scripts/: bench_collate.py  bench_compare_par2.sh  bench_env_info.sh  bench_matrix_local.sh  bench_matrix_simple.sh  bench_pack_local.sh  bench_repair_smoke.sh  bench_to_html.py  benchmark.sh  ci_smoke.ps1  ci_smoke.sh  enable_required_signatures.sh  harness_run_min.sh  summarize_latest.sh  summarize_results.py  test_both.ps1  test_run.sh  tests_stress.sh  update_required_checks.sh
src/: lib.rs
tests/: integration.rs
(+231 files in other folders)
