[package]
name = "parx-cli"
version = "0.6.0-beta.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "ParXive command-line interface using parx-core."
readme = false
repository = "https://github.com/rTiGd2/ParXive"
rust-version = "1.74"
keywords = ["parity", "erasure-coding", "integrity", "merkle", "par2"]
categories = ["command-line-utilities", "filesystem"]

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
rand = "0.8"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
globset = "0.4"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
rayon = "1"
blake3 = "1"
zstd = "0.13"
bincode = "1"
pathdiff = "0.2"
crc32fast = "1.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

parx-core = { path = "../parx-core", version = "0.6.0-beta.0" }

[features]
cuda = ["parx-core/cuda"]

[[bin]]
name = "parx"
path = "src/main.rs"
