[package]
name = "parx-core"
version = "0.6.0-beta.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "ParXive core library: erasure coding, volumes, manifest, repair, audit."
repository = "https://github.com/rTiGd2/ParXive"
readme = false
rust-version = "1.74"
keywords = ["parity", "erasure-coding", "integrity", "merkle", "par2"]
categories = ["command-line-utilities", "filesystem"]

[features]
# CUDA backend (optional)
cuda = ["dep:rustacuda"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
memmap2 = "0.9"
walkdir = "2"
rayon = "1"
globset = "0.4"
reed-solomon-erasure = "6"
zstd = "0.13"
bincode = "1"
pathdiff = "0.2"
fs2 = "0.4"
fluent-bundle = "0.15"
unic-langid = "0.9"
rustacuda = { version = "0.1", optional = true }
crc32fast = "1.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
proptest = "1"
rand = "0.8"
tempfile = "3"
getrandom = "0.2"
fastrand = "2"

# i18n scaffolding (kept optional for now; we'll wire Fluent in step 2)
# fluent-bundle = "0.15"
# fluent-templates = "0.10"
